--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+button[type="button"] {
+  @apply bg-gray-200 text-gray-900 py-2 px-4 border border-gray-200;
+}
+
+button[type="submit"] {
+  @apply bg-blue-500 text-white py-2 px-4 border border-blue-500;
+}
