--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,10 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
-button[type="button"] {
-  @apply bg-gray-200 text-gray-900 py-2 px-4 border border-gray-200;
+body {
+  background-color: #f6f7fb;
+}
+button[type="button"],
+button[type="submit"] {
+  @apply bg-gray-200 text-gray-900 py-2 px-4 border border-gray-200 rounded-md;
 }
 
 button[type="submit"] {
-  @apply bg-blue-500 text-white py-2 px-4 border border-blue-500;
+  @apply bg-blue-500 text-white border border-blue-500;
+}
+
+input[type="text"] {
+  @apply w-full block rounded-md;
 }
