--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,11 +6,13 @@ body {
   background-color: #f6f7fb;
 }
 button[type="button"],
-button[type="submit"] {
+button[type="submit"],
+button.primary {
   @apply bg-gray-200 text-gray-900 py-2 px-4 border border-gray-200 rounded-md;
 }
 
-button[type="submit"] {
+button[type="submit"],
+button.primary {
   @apply bg-blue-500 text-white border border-blue-500;
 }
 
